--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 .hero{
     padding-top: 64px;
     padding-bottom: 100px;
@@ -16,7 +18,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: variables.$secondaryTextColor;
         content: ""; //para escurecer a imagem de fundo. Ele cria uma imagem escura por cima. 
         //tem que colocar o POSITION: RELATIVE antes. 
         opacity: .7;
